# CometBot

./: .breakpoints  .replit  LICENSE  README.md  ToS.md  bank.json  dontDie.py  levels.json  main.py  pyproject.toml  serverCount.json  setup.json  slurs.json  slurs.txt  test.py  test2.py  test3.py  warns.json
static/: styles.css
static/styles/: styles.css
templates/: creators.html  features.html  index.html  invite.html  versions.html
templates/html/: features.html
weirdVidsOfEvery1/: DomVid1.mov  charVid1.mov  stevenVid1.mov
