[tool.poetry]
name = "Comet"
version = "1.0.0"
description = "A open-source discord.py bot."
authors = ["Emmanuel Castillo emmanuelino2@gmail.com","Garen Gevorgyan"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
aiofiles = "^0.6.0"
replit = "^2.0.0"
flask = "^1.1.2"
youtube-dl = "^2021.4.1"
ffmpeg = "^1.4"
Pynac = "^0.9.7"
words = "^0.0.1"
randfacts = "^0.3.0"
folder = "^0.0.1"
PyNaCl = "^1.4.0"
gtts = "^2.2.2"
zalgo-text = "^0.6"
googletrans = "^3.0.0"
lxml = "^4.6.3"
bs4 = "^0.0.1"
google-api-python-client = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
