[tool.poetry]
name = "Comet"
version = "2.0.0"
description = "A open-source discord.py bot."
authors = ["Emmanuel Castillo emmanuelino2@gmail.com","Garen Gevorgyan"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
aiofiles = "^0.6.0"
replit = "^2.0.0"
flask = "^1.1.2"
youtube-dl = "^2021.4.1"
Pynac = "^0.9.7"
words = "^0.0.1"
randfacts = "^0.3.0"
folder = "^0.0.1"
PyNaCl = "^1.4.0"
gtts = "^2.2.2"
zalgo-text = "^0.6"
googletrans = "^3.0.0"
lxml = "^4.6.3"
bs4 = "^0.0.1"
mutagen = "^1.45.1"
audioread = "^2.1.9"
wikipedia = "^1.4.0"
sympy = "^1.8"
pytz = "^2021.1"
spotdl = "^3.7.2"
google-api-helper = "^0.3.1"
google-api-python-client = "^2.18.0"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
