[tool.poetry]
name = "repl_python3_CometBot"
version = "0.1.0"
description = ""
authors = ["EmmanuelCH <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
gTTS = "^2.2.3"
discord = "^1.7.3"
audioread = "^2.1.9"
pytz = "^2021.1"
ffmpeg = "^1.4"
googletrans = "^3.0.0"
wikipedia = "^1.4.0"
zalgo-text = "^0.6"
youtube_dl = "^2021.6.6"
google-api-python-client = "^2.19.1"
sympy = "^1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
